--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.inputsystem": "1.2.0",
     "com.unity.postprocessing": "3.2.0",
+    "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.shadergraph": "10.8.1",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
